--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   get: ^4.6.6
   google_fonts: ^6.2.0
   http: ^1.2.0
+  intl: ^0.19.0
+  table_calendar: ^3.1.1
 
 dev_dependencies:
   flutter_test:
