--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,12 +7,18 @@ environment:
   sdk: ">=3.2.3 <4.0.0"
 
 dependencies:
+  another_flutter_splash_screen: ^1.2.0
+  easy_splash_screen: ^1.0.4
   flutter:
     sdk: flutter
+  flutter_windowmanager: ^0.2.0
   get: ^4.6.6
+  get_storage: ^2.1.1
   google_fonts: ^6.2.0
   http: ^1.2.0
   intl: ^0.19.0
+  qr_flutter: ^4.1.0
+  shared_preferences: ^2.2.2
   table_calendar: ^3.1.1
 
 dev_dependencies:
@@ -25,3 +31,4 @@ flutter:
   assets:
     - assets/inorasiicon.png
     - assets/logo.png
+    - assets/empty.png
