--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   google_fonts: ^6.2.0
   http: ^1.2.0
   intl: ^0.19.0
+  loading_animation_widget: ^1.2.1
   qr_flutter: ^4.1.0
   shared_preferences: ^2.2.2
   table_calendar: ^3.1.1
