--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,15 +12,19 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_windowmanager: ^0.2.0
+  geolocator: ^11.0.0
   get: ^4.6.6
   get_storage: ^2.1.1
   google_fonts: ^6.2.0
   http: ^1.2.0
   intl: ^0.19.0
   loading_animation_widget: ^1.2.1
+  path_provider: ^2.1.3
+  permission_handler: ^11.3.1
   qr_flutter: ^4.1.0
   shared_preferences: ^2.2.2
   table_calendar: ^3.1.1
+  xml: ^6.5.0
 
 dev_dependencies:
   flutter_test:
